--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>TurtleCoin Crypto-Hackathon 2019</title>
-		<meta name="description" content="To celebrate our 2nd year as a community on December 9th 2019, we are sponsoring the first annual TurtleCoin™ Crypto-Hackathon. The purpose of this event is to reward the diverse and talented group of contributors TurtleCoin™ has gathered across many networks and communities, artists and developers alike. Just because we love you :)">
+		<title>TurtleCoin® Crypto-Hackathon 2019</title>
+		<meta name="description" content="To celebrate our 2nd year as a community on December 9th 2019, we are sponsoring the first annual TurtleCoin® Crypto-Hackathon. The purpose of this event is to reward the diverse and talented group of contributors TurtleCoin™ has gathered across many networks and communities, artists and developers alike. Just because we love you :)">
 		<meta name="keywords" content="TurtleCoin, Crypto, Hackathon, Cryptocurrency, Programming, Code, Bounty">
 		<meta name="robots" content="index, follow">
-		<meta name="copyright" content="TurtleCoin Core Team">
+		<meta name="copyright" content="TurtleCoin® Core Team">
 		<meta name="language" content="EN">
-		<meta name="author" content="TurtleCoin Core Team">
+		<meta name="author" content="TurtleCoin® Core Team">
 		<meta name="creationdate" content="November 01, 2019">
 		<meta name="distribution" content="global">
 		<meta name="rating" content="general">
-		<meta property="og:title" content="TurtleCoin Crypto-Hackathon 2019">
-		<meta property="og:description" content="To celebrate our 2nd year as a community on December 9th 2019, we are sponsoring the first annual TurtleCoin™ Crypto-Hackathon. The purpose of this event is to reward the diverse and talented group of contributors TurtleCoin™ has gathered across many networks and communities, artists and developers alike. Just because we love you :)">
+		<meta property="og:title" content="TurtleCoin® Crypto-Hackathon 2019">
+		<meta property="og:description" content="To celebrate our 2nd year as a community on December 9th 2019, we are sponsoring the first annual TurtleCoin® Crypto-Hackathon. The purpose of this event is to reward the diverse and talented group of contributors TurtleCoin™ has gathered across many networks and communities, artists and developers alike. Just because we love you :)">
 		<meta property="og:image" content="https://imgur.com/zqHxuO6.png">
 		<meta property="og:url" content="https://crypto-hackathon.com">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -26,7 +26,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">TurtleCoin&trade;</a></h1>
+						<h1><a href="index.html">TurtleCoin&reg;</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -48,7 +48,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><img src="./images/turtle_shield_animate.svg" alt="animated turtlecoin shield logo" height=100 width=100/></div>
-							<h2>TurtleCoin&trade; Crypto-Hackathon 2019</h2>
+							<h2>TurtleCoin&reg; Crypto-Hackathon 2019</h2>
 							<p>Individuals & Teams, Artists & Devs, <strong>One TRTL Community</strong></p>
 						</div>
 					</section>
@@ -59,10 +59,10 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="./images/turtle_shield_animate.svg" height=250 width=250 alt="TurtleCoin animated logo" /></a>
+									<a href="#" class="image"><img src="./images/turtle_shield_animate.svg" height=250 width=250 alt="TurtleCoin® animated logo" /></a>
 									<div class="content">
-										<h2 class="major">Announcing the first annual TurtleCoin&trade; Crypto-Hackathon</h2>
-										<p><strong>To celebrate our 2nd year as a community on December 9th 2019, we are sponsoring the first annual TurtleCoin&trade; Crypto-Hackathon.</strong> The purpose of this event is to reward the diverse and talented group of contributors TurtleCoin&trade; has gathered across many networks and communities, artists and developers alike. Just because we love you :)</p>
+										<h2 class="major">Announcing the first annual TurtleCoin&reg; Crypto-Hackathon</h2>
+										<p><strong>To celebrate our 2nd year as a community on December 9th 2019, we are sponsoring the first annual TurtleCoin&reg; Crypto-Hackathon.</strong> The purpose of this event is to reward the diverse and talented group of contributors TurtleCoin&reg; has gathered across many networks and communities, artists and developers alike. Just because we love you :)</p>
 										<a href="https://forms.gle/bsMpMQbXxh88Lxdu6" class="special">Register your team here</a>
 									</div>
 								</div>
@@ -71,7 +71,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="./images/Computing.png" height=250 width=250 alt="TurtleCoin animated logo" /></a>
+									<a href="#" class="image"><img src="./images/Computing.png" height=250 width=250 alt="TurtleCoin® animated logo" /></a>
 									<div class="content">
 										<h2 class="major">General Rules for Teams</h2>
 										<ul>
@@ -88,7 +88,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="./images/PlugandPlay.png" alt="TurtleCoin animated logo" /></a>
+									<a href="#" class="image"><img src="./images/PlugandPlay.png" alt="TurtleCoin® animated logo" /></a>
 									<div class="content">
 											<h6><u>10,000,000 TRTL PRIZE</u></h6>
 										<h2 class="major">Development Path</h2>
@@ -115,8 +115,8 @@
 										</p>
                                         <p>
 											<strong>
-												<a href="https://docs.turtlecoin.lol/developer/api/daemon-json-rpc-api" class="special">TurtleCoin Daemon API</a>
-                                            </strong> Build rich applications by directly interacting with a full TurtleCoin node. Retrieve detailed block data, submit mined blocks, and more.
+												<a href="https://docs.turtlecoin.lol/developer/api/daemon-json-rpc-api" class="special">TurtleCoin&reg; Daemon API</a>
+                                            </strong> Build rich applications by directly interacting with a full TurtleCoin&reg; node. Retrieve detailed block data, submit mined blocks, and more.
 										</p>
 									</div>
 								</div>
@@ -130,9 +130,9 @@
 									<section class="features">
 										<article>
 											<h6><u>3,000,000 TRTL PRIZE</u></h6>
-											<h3 class="major">Best TurtleCoin&trade; Propaganda Poster</h3>
-											<p>Create a printable poster graphic to brainwash the masses into accepting TurtleCoin&trade; into their hearts!</p>
-											<p>Contenders in this category must create the most subversive and clever posters to influence the masses to give TurtleCoin&trade; a shot. As long as it isn't market-related you can design whatever you like!</p>
+											<h3 class="major">Best TurtleCoin&reg; Propaganda Poster</h3>
+											<p>Create a printable poster graphic to brainwash the masses into accepting TurtleCoin&reg; into their hearts!</p>
+											<p>Contenders in this category must create the most subversive and clever posters to influence the masses to give TurtleCoin&reg; a shot. As long as it isn't market-related you can design whatever you like!</p>
 										</article>
 										<article>
 											<h6><u>2,000,000 TRTL PRIZE</u></h6>
@@ -151,7 +151,7 @@
 						<div class="inner">
 							<h2 class="major">Thank You</h2>
 							<p>We look forward to spending another year with you :)</p>
-							<p><strong>TurtleCoin&trade; Core Team, 2019</strong></p>
+							<p><strong>TurtleCoin&reg; Core Team, 2019</strong></p>
 						</div>
 					</section>
 
